--- a/ProjectThree/main.css
+++ b/ProjectThree/main.css
@@ -1,6 +1,7 @@
 :root {
   --primary-color: #0f4c75;
-  --secondary-color: #3282b8;
+  --secondary-color: rgb(50 130 184 / 99%);
+  --button-color: #b8324b;
   --font-color: #eeeeee;
   --text-color: #e4e3e3;
   --white-color: #fff;
@@ -11,6 +12,28 @@
 }
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.control-button {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: var(--secondary-color);
+}
+.control-button span {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--white-color);
+  padding: 15px 25px;
+  font-size: 30px;
+  text-align: center;
+  background-color: var(--button-color);
+  border-radius: 10px;
+  cursor: pointer;
 }
 .container {
   background-color: var(--primary-color);
@@ -74,6 +97,9 @@ body {
   width: 100%;
   height: 100%;
   text-align: center;
+  background-color: var(--primary-color);
+  backface-visibility: hidden;
+  border-radius: 20px;
 }
 
 .memory-game-blocks .game-block.is-flipped,
