--- a/Quiz-App/src/views/index.html
+++ b/Quiz-App/src/views/index.html
@@ -6,6 +6,26 @@
     <title>Quiz App</title>
   </head>
   <body>
-    <h1>Quiz App Using Webpack</h1>
+    <div class="container">
+      <div class="quiz-content">
+        <h2>Quiz App</h2>
+        <button type="button" class="btn btn-primary" id="start">
+          Start Quiz
+        </button>
+      </div>
+      <div class="card border-primary">
+        <div class="card-header">
+          Quiz One
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">
+            With supporting text below as a natural lead-in to additional
+            content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
