--- a/Quiz-App/src/views/index.html
+++ b/Quiz-App/src/views/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quiz App</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="quiz-content">
-        <h2>Quiz App</h2>
-        <button type="button" class="btn btn-primary" id="start">
-          Start Quiz
-        </button>
-      </div>
-      <div class="card border-primary">
-        <div class="card-header">
-          Quiz One
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">
-            With supporting text below as a natural lead-in to additional
-            content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Quiz App</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="quiz-content">
+      <h2>Quiz App</h2>
+      <button type="button" class="btn btn-primary" id="start">
+        Start Quiz
+      </button>
     </div>
-  </body>
+
+    <div class="card-container">
+    </div>
+
+    <div class="result-button">
+      <button class="btn btn-info hide" id="submit">Show Result</button>
+    </div>
+    <div id="result">
+    </div>
+
+  </div>
+
+</body>
+
 </html>
